--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <div id="counter"> Свечей задуто: </div>
     </div>
     <div id="second">
-        Дорогая АЛИНА, поздравляю тебя с Днём Рождения, желаю тебе поменьше кринжовых поздравлений, быть всегда здоровой и сильной борцухой, <br>
-        не париться по мелочам, быть умной (то есть просто не тупеть), шоб усы росли только через 50 лет, <br>
-        ну и так по мелочам: домик, машинку, сдать все лабы... <br>
+        <font color="#915D1">Дорогая</font> <font color="#78BC6B">АЛИНА,</font> <font color="#D41F69">поздравляю</font> <font color="#1F63C0">тебя</font> <font color="#186AD7">с</font> <font color="#6EC1A3">Днём</font> <font color="#8C329E">Рождения,</font> <font color="#C348BD">желаю</font> <font color="#77A1D">тебе</font> <font color="#A0D41F">поменьше</font> <font color="#481724">кринжовых</font> <font color="#9ABAB">поздравлений,</font> <font color="#858C5C">быть</font> <font color="#166683">всегда</font> <font color="#D07787">здоровой</font> <font color="#D10D3">и</font> <font color="#60AA33">сильной</font> <font color="#1A124B">борцухой,</font><br>
+        <font color="#5991D2">не</font> <font color="#4ADCE1">париться</font> <font color="#6BA06A">по</font> <font color="#4E33CE">мелочам,</font> <font color="#9D1854">быть</font> <font color="#632CBF">умной</font> <font color="#B728A">(то</font> <font color="#B6A428">есть</font> <font color="#6F5E9B">просто</font> <font color="#42A544">не</font> <font color="#A82CA6">тупеть),</font> <font color="#3FA192">шоб</font> <font color="#471BDB">усы</font> <font color="#555F50">росли</font> <font color="#DF8D80">только</font> <font color="#9CB4A">через</font> <font color="#A123">50</font> <font color="#7DCC5B">лет,</font><br>
+        <font color="#979113">ну</font> <font color="#4318C2">и</font> <font color="#BA64CA">так</font> <font color="#7B2879">по</font> <font color="#2016B3">мелочам:</font> <font color="#B9C5CD">домик,</font> <font color="#C67B0">машинку,</font> <font color="#7B2F88">сдать</font> <font color="#23680">все</font> <font color="#E15749">лабы...</font> <font color="#8E6DD1"></font><br>
         НИКАКИХ ДИПРЕССИЙ<br>
-        кушай тортик и толстей.<br>
+        <font color="#7B05B">кушай</font> <font color="#49C371">тортик</font> <font color="#36B0A1">и</font> <font color="#166B8C">толстей.</font><br>
         СЛОВОМ<br>
-        оставаться в 19 такой же прекрасной как была в 18, 17 и наверное до этого<br>
+        <font color="#C25F8A">оставаться</font> <font color="#E0C957">в</font> <font color="#7DB74">19</font> <font color="#8ECD43">такой</font> <font color="#A71DC1">же</font> <font color="#282990">прекрасной</font> <font color="#BD721B">как</font> <font color="#4459CC">была</font> <font color="#92DF41">в</font> <font color="#89D8A1">18,</font> <font color="#9F41CA">17</font> <font color="#CB363D">и</font> <font color="#AB95B">наверное</font> <font color="#DDB9B">до</font> <font color="#E193E0">этого</font><br>
         <img src="baloon.png" alt="">
         the end, maybe be continue
     </div>
